Bug 342596 - "Never" option in screenlocker KCM can't be discovered intuitively
Summary: "Never" option in screenlocker KCM can't be discovered intuitively
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
: 345633 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-07 18:49 UTC by Elias Probst
Modified: 2015-03-29 21:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
bshah: Usability+


Attachments
attachment-7282-0.html (1.22 KB, text/html)
2015-03-29 21:06 UTC, Ki Bum Lee
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2015-01-07 18:49:52 UTC
The "Never" option in screenlocker KCM can't be discovered intuitively.

One needs to scroll down to 0 in the "Lock screen after" field to get the option to never lock the screen - I just discovered this by accident but could have never guessed how to get this option otherwise.

IMHO there should be a "[x] Lock screen automatically" checkbox instead above the "Lock screen after" and "Require password after locking" options.

When the checkbox is disabled, those options should be greyed out.
Comment 1 Thomas Pfeiffer 2015-01-08 13:40:58 UTC
You are right, and I must admit that I missed that during my original usability review.
I had voted for using a combobox instead of the number spinner as per Sebas' suggestion, but that wasn't implemented.
Now tzhat you mention it I also notice the logical inconsistency: A zero value for "Lock screen after" would logically mean "immediately" instead of "never".
I do agree that using a checkbox would be the best way to solve this.
Comment 2 David Edmundson 2015-03-06 12:11:11 UTC
Git commit 65045cb50a68114799711f2b891eac1b0370287e by David Edmundson.
Committed on 04/03/2015 at 20:56.
Pushed by davidedmundson into branch 'master'.

Add separate checkbox for automatically lock screen

This improves usability over setting the timeout to 0.
Defaults behaviour is unchanged

REVIEW: 122598

M  +7    -2    ksmserver/screenlocker/kcfg/kscreenlockersettings.kcfg
M  +69   -56   ksmserver/screenlocker/kcm/kcm.ui
M  +2    -1    ksmserver/screenlocker/ksldapp.cpp

http://commits.kde.org/plasma-workspace/65045cb50a68114799711f2b891eac1b0370287e
Comment 3 Wolfgang Bauer 2015-03-29 09:46:20 UTC
*** Bug 345633 has been marked as a duplicate of this bug. ***
Comment 4 Ki Bum Lee 2015-03-29 21:06:24 UTC
Created attachment 91811 [details]
attachment-7282-0.html

It worked. Danke shoen!

Ki Lee

2015-03-29 5:46 GMT-04:00 Wolfgang Bauer <wbauer@tmo.at>:

> https://bugs.kde.org/show_bug.cgi?id=342596
>
> Wolfgang Bauer <wbauer@tmo.at> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>                  CC|                            |kbumicon@gmail.com
>
> --- Comment #3 from Wolfgang Bauer <wbauer@tmo.at> ---
> *** Bug 345633 has been marked as a duplicate of this bug. ***
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>