Add separate checkbox for automatically lock screen

This improves usability over setting the timeout to 0.
Defaults behaviour is unchanged

BUG: 342596

REVIEW: 122598